--- a/QT/QT17.md
+++ b/QT/QT17.md
@@ -1,4 +1,4 @@
-# COMPUTER VISON
+# COMPUTER VISON CONFERANCES AND JOURNALS
 ## Các hội nghị:
 
 
@@ -25,6 +25,8 @@
 
 ***Nguồn: https://www.guide2research.com/journals/computer-vision***<br>
 *Cập nhật lần cuối: 13/3/2021*<br>
+
+
 
 
 
