--- a/QT/QT11.md
+++ b/QT/QT11.md
@@ -11,4 +11,14 @@
   Tìm kiếm sách dựa trên text của người dùng nhập vào
 
 # Google tìm kiếm nâng cao
-![image.png](
+![image](https://user-images.githubusercontent.com/62539475/111019806-0e4b3200-83f4-11eb-8dc6-358a487bed8c.png)
+
+Phần tìm kiếm nâng cao gồm các mục:
+- Ngôn ngữ
+- Vùng
+- Lần cập nhật gần đây nhất
+- Trang web hoặc tên miền
+- Vị trí từ xuất hiện
+- Tìm kiếm an toàn
+- Loại tiệp
+- Quyền sử dụng
