--- a/QT/QT11.md
+++ b/QT/QT11.md
@@ -1,4 +1,4 @@
-# Các loại Google 
+# Các loại Google <img src="https://user-images.githubusercontent.com/62539475/111019855-62eead00-83f4-11eb-8e1a-961873e0daf8.png" alt="google" width="25" />
 1. Google tìm kiếm cơ bản: 
    Google tìm kiếm thông tin dựa trên text(một từ, một cụm từ, một câu, một đoạn,..)
 2. Google image:
