--- a/QT/QT16.md
+++ b/QT/QT16.md
@@ -1,4 +1,5 @@
 QT16: PHẦN MỀM QUẢN LÝ TÀI LIỆU THAM KHẢO VÀ TRÍCH DẪN
 
 Sử dụng phần mềm quản lý ENDNOTE
-![image](https://www.google.com/url?sa=i&url=https%3A%2F%2Fendnote.com%2F&psig=AOvVaw3ePsIS2BUXdlkg2x1TRMVV&ust=1615777770356000&source=images&cd=vfe&ved=0CAYQjRxqFwoTCNiFuaPnru8CFQAAAAAdAAAAABAD)  
+![image](https://i.imgur.com/PRTrDt8.png)  
+
