--- a/QT/QT16.md
+++ b/QT/QT16.md
@@ -1,5 +1,13 @@
 QT16: PHẦN MỀM QUẢN LÝ TÀI LIỆU THAM KHẢO VÀ TRÍCH DẪN
 
-Sử dụng phần mềm quản lý ENDNOTE
+
+# Sử dụng phần mềm quản lý ENDNOTE
 ![image](https://i.imgur.com/PRTrDt8.png)  
 
+
+- Phần mềm EndNote được sử dụng phổ biến với các chức năng: tìm kiếm, quản lý, trích dẫn và tạo danh mục tài liệu tham khảo một cách tự động.  
+- Tài liệu tham khảo từ các cở sở dữ liệu trực tuyến trên mạng Internet được tìm kiếm và đưa các tài liệu đó vào lưu trữ trong thư viện của EndNote.
+- EndNote có thể lưu trữ và quản lý được 100000 tài liệu tham khảo.
+- Endnote hỗ trợ tính năng kết nối các cơ sở dữ liệu trực tuyến đến hơn 4000 tập tin kết nối. 
+- Sử dụng phần mềm Endnode để trích dẫn và tạo danh mục tài liệu tham khảo trong file văn bản theo yêu cầu định dạng của nhà xuất bản một cách hoàn toàn tự động.
+- 
