--- a/QT/QT16.md
+++ b/QT/QT16.md
@@ -4,10 +4,8 @@ QT16: PHẦN MỀM QUẢN LÝ TÀI LIỆU THAM KHẢO VÀ TRÍCH DẪN
 # Sử dụng phần mềm quản lý ENDNOTE
 ![image](https://i.imgur.com/PRTrDt8.png)  
 
-
-- Phần mềm EndNote được sử dụng phổ biến với các chức năng: tìm kiếm, quản lý, trích dẫn và tạo danh mục tài liệu tham khảo một cách tự động.  
-- Tài liệu tham khảo từ các cở sở dữ liệu trực tuyến trên mạng Internet được tìm kiếm và đưa các tài liệu đó vào lưu trữ trong thư viện của EndNote.
+- Phần mềm EndNote là một công cụ tìm kiếm trực tuyến hữu ích. Với EndNote chúng ta có thể tìm kiếm thông tin từ các nguồn dữ liệu trên mạng Internet và đưa các tài liệu tham khảo về lưu trữ trong thư viện của EndNote một cách dễ dàng. EndNote cũng có thể giúp chúng ta xuất dữ liệu để lưu trữ tại các dịch vụ trực tuyến và các cơ sở dữ liệu.
+- EndNote là một kho dữ liệu tham khảo với các chức năng lưu trữ, quản lý, tìm kiếm tài liệu tham khảo cho thư viện tài liệu tham khảo của cá nhân người sử dụng.
+- Sử dụng phần mềm EndNote cho phép người sử dụng trích dẫn trực tiếp tài liệu tham khảo vào file word.
+- EndNote có thể giúp bạn tạo danh mục tài liệu tham khảo và bản yêu cầu định dạng của nhà xuất bản.
 - EndNote có thể lưu trữ và quản lý được 100000 tài liệu tham khảo.
-- Endnote hỗ trợ tính năng kết nối các cơ sở dữ liệu trực tuyến đến hơn 4000 tập tin kết nối. 
-- Sử dụng phần mềm Endnode để trích dẫn và tạo danh mục tài liệu tham khảo trong file văn bản theo yêu cầu định dạng của nhà xuất bản một cách hoàn toàn tự động.
-- 
