--- a/QT/QT14.md
+++ b/QT/QT14.md
@@ -1,3 +1,3 @@
 QT14: TẠO MINIMAP LIÊN QUAN ĐẾN BÀI BÁO KHOA HỌC
 
-[MINIMAP LIÊN QUAN ĐẾN BÀI BÁO KHOA HỌC]()
+[MINIMAP LIÊN QUAN ĐẾN BÀI BÁO KHOA HỌC](https://github.com/hoangnhancs/CS519.L21.KHTN/blob/main/imgsrc/mindmap_baibaonckh.png)
